Override import extension lint rule

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "eslintConfig": {
     "extends": [
       "personal"
-    ]
+    ],
+    "rules": {
+      "import/extensions": "off"
+    }
   }
 }
